--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
      <title>Document</title>
  </head>
  <body>
-     
-        <img id="like" src="/imagens/like.png" alt="">
+ <img id="like" src="/imagens/like.png" alt="">
 
 
-
-        <ul id="lista" num = "10" > </ul>
-
-        <script src="/script.js"></script>
-
-
+ <ul id="lista" data-num=5>
+ </ul>
        
+
+ <script src="/script.js"></script>
  </body>
  </html>
