--- a/animação/canvas/index.html
+++ b/animação/canvas/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <style>
         #tela {
-            background-color: chocolate;
+            background-color:chocolate
         }
     </style>
 </head>
