--- a/grid/index.html
+++ b/grid/index.html
@@ -13,25 +13,43 @@
 
 <body>
     <div class="container">
-
-        <div class=" r1 item1">
-            <div class="lista">
-                <div class="logo"><h1> Smarter</h1></div>
-                <div class="data"><h1> 00/00/00</div></h1>
-                <div class="icones"><h1> Ícones</h1></div>
-
+  
+            <div class=" r1 item1">
+                <div class="logo">
+                    <h1> Smarter</h1>
+                </div>
+                <div class="data">
+                    <h1> 00/00/00
+                </div>
+                </h1>
+                <div class="icones">
+                    <h1> Ícones</h1>
+                </div>
 
             </div>
+        
+
+        <div class="r2 item2">2
+
+
+
         </div>
 
 
-        <div class="r2 item2">2</div>
+
         <div class="r3 item3">3</div>
         <div class="r4 item4">4</div>
+
+
         <div class="r5 item5">5</div>
         <div class="r6 item6">6</div>
         <div class="r7 item7">7</div>
-        <div class="r8 item8">8</div>
+
+
+        <div class="r8 item8">8
+
+
+        </div>
 
     </div>
 
